--- a/PyDelhi.desktop
+++ b/PyDelhi.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=PyDelhiConf App
-Comment=a minimal Markdown reading & writing app. Change Log: (https://typora.io/windows/dev_release.html)
+Comment=The official PyDelhi App for PyDelhiConf
 Exec=python /usr/bin/pydelhiconf/main.py -m screen:droid2,portrait -m inspector
 Icon=/usr/share/icons/pydelhi.jpg
 Type=Application
